--- a/LaurasForms/participants/templates/participants/list_participants.html
+++ b/LaurasForms/participants/templates/participants/list_participants.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {% load static %}
-<!--{% load staticfiles %}-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -30,7 +29,11 @@
                 {% if p.rev_status == 'Reviewed - Accepted' %}
                     <nav class="Green"><a href = ""> {{ p.rev_status }} </a></nav>
                 {% else %}
-                    <nav><a href = ""> {{ p.rev_status }} </a></nav>
+                    {% if p.rev_status == 'Reviewed - Not Accepted' %}
+                        <nav class="Red"><a href = ""> {{ p.rev_status }} </a></nav>
+                    {% else %}
+                        <nav><a href = ""> {{ p.rev_status }} </a></nav>
+                    {% endif %}
                 {% endif %}
             </section>
         </div>
