--- a/LaurasForms/participants/templates/participants/add_participant.html
+++ b/LaurasForms/participants/templates/participants/add_participant.html
@@ -9,14 +9,14 @@
 <body>
     <div>
         <a href="{% url 'add_participant' %}" class="top-menu"></a>
-        <h1><a href=""/>New Participant Addition</h1>
+        <h1><a href="">New Participant Addition</a></h1>
     </div>
     <div>
         {% block content %}
         <form method="POST" class="add_participant">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
+            <input type="submit" value = "Add Participant">
         </form>
         {% endblock %}
     </div>
