--- a/LaurasForms/participants/templates/participants/add_participant.html
+++ b/LaurasForms/participants/templates/participants/add_participant.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <a href="{% url 'add_participant' %}" class="top-menu"></a>
-        <h1><a href="">New Participant Addition</a></h1>
+        <h1><a href="">New Participant</a></h1>
     </div>
     <div>
         {% block content %}
