--- a/LaurasForms/participants/templates/participants/list_participants.html
+++ b/LaurasForms/participants/templates/participants/list_participants.html
@@ -10,7 +10,6 @@
     <div>
         <h1><a href="/">All Registered Participants</a></h1>
     </div>
-    <!--<table style="border:1px solid green">-->
     <table>
         <tr>
             <th>Name</th>
@@ -18,7 +17,7 @@
             <th>Siblings</th>
             <th>Environmental Exposures</th>
             <th>Genetic Mutations</th>
-            <th>Review Status</th>
+            <th colspan="2">Review Status</th>
         </tr>
         {% for p in participant %}
             <tr>
@@ -30,7 +29,6 @@
                         {{ line }} <br>
                     {% endfor %}
                 </td>
-                <!--<td style="white-space:pre-wrap; word-wrap:break-word">-->
                 <td class="left">
                     {% for line in p.gen_mutations.splitlines %}
                         {{ line }} <br>
@@ -38,27 +36,25 @@
                 </td>
                 <td>
                     <form method="POST">{% csrf_token %}
-                        <label for="rev_status_choices">foo</label>
-                        <!--<select type="text" id="rev_status_choices" name="rev_status_choices">-->
-                        <select id="rev_status_choices" name="rev_status_choices">
-                            {% for fields, displayable in models.ReviewStatus.review_status_choices %}
-                                <option> {{fields}} </option>
+                        <select id="dropdown" name={{p.participant_name}} name="rev_status" onChange="this.form.submit()">
+                            {% for i, j in choices %}
+                                {% if i == p.rev_status %}
+                                    <option selected class={{j}}> {{ i }} </option>
+                                {% else %}
+                                    <option class={{j}}> {{ i }} </option>
+                                {% endif %}
                             {% endfor %}
-                            <!--<option selected>Not Reviewed</option>-->
-                            <!--<option>Reviewed - Accepted</option>-->
-                            <!--<option>Reviewed - Not Accepted</option>-->
                         </select>
-                        <input type="submit" value = "Submit!">
                     </form>
                 </td>
                 <td>
                     {% if p.rev_status == 'Reviewed - Accepted' %}
-                        <nav class="Green"><a href = ""> {{ p.rev_status }} </a></nav>
+                        <nav class="Accepted"><a href = ""> {{ p.rev_status }} </a></nav>
                     {% else %}
                         {% if p.rev_status == 'Reviewed - Not Accepted' %}
-                            <nav class="Red"><a href = ""> {{ p.rev_status }} </a></nav>
+                            <nav class="NotAccepted"><a href = ""> {{ p.rev_status }} </a></nav>
                         {% else %}
-                            <nav><a href = ""> {{ p.rev_status }} </a></nav>
+                            <nav class="NoReview"><a href = ""> {{ p.rev_status }} </a></nav>
                         {% endif %}
                     {% endif %}
                 </td>
@@ -67,34 +63,3 @@
     </table>
 </body>
 </html>
-                <!--<td>-->
-                    <!--<div class="dropdown">-->
-                        <!--{% for field, value in form.fields.rev_status_choices.choices %}-->
-                        <!--<option value="{{field}}"> {{ value }} </option>-->
-                        <!--{% endfor %}-->
-                    <!--</div>-->
-                <!--</td>-->
-                <!--<td>-->
-                    <!--<option value="Start"></option>-->
-                    <!--{% for field, displayvalue in forms.fields.rev_status_choices.choices %}-->
-                    <!--<option value="{{ field }}"> {{ displayvalue }} </option>-->
-                    <!--{% endfor %}-->
-                <!--</td>-->
-
-                    <!--{% for choice in form.ReviewStatusForm.field.choices %}-->
-                        <!--<div class="dropdown", name="rev_status_choices">-->
-                            <!--{% for value, displayable in form.ReviewStatusForm.choices %}-->
-                                <!--<option value="{{value}}"> {{ displayable }} </option>-->
-                            <!--{% endfor %}-->
-                        <!--</div>-->
-                    <!--{% endfor %}-->
-
-                    <!--<label>Jingle</label>-->
-                    <!--<select name="rev_status_choices">-->
-                        <!--&lt;!&ndash;class="selectpicker" data-title="Select Status" data-style="btn-default btn-block" data-menu-style="dropdown-blue">&ndash;&gt;-->
-                        <!--<div class="dropdown">-->
-                            <!--{% for value, displayable in models.rev_status_choices.choices %}-->
-                            <!--<option value="{{value}}"> {{ displayable }} </option>-->
-                            <!--{% endfor %}-->
-                        <!--</div>-->
-                    <!--</select>-->
