removed displaying of blank lines in text areas

--- a/LaurasForms/participants/templates/participants/list_participants.html
+++ b/LaurasForms/participants/templates/participants/list_participants.html
@@ -26,12 +26,16 @@
                 <td> {{ p.participant_siblings }} </td>
                 <td class="left">
                     {% for line in p.environmental_exposures.splitlines %}
-                        {{ line }} <br>
+                        {% if line != "" %}
+                            {{ line }} <br>
+                        {% endif %}
                     {% endfor %}
                 </td>
                 <td class="left">
                     {% for line in p.genetic_mutations.splitlines %}
-                        {{ line }} <br>
+                        {% if line != "" %}
+                            {{ line }} <br>
+                        {% endif %}
                     {% endfor %}
                 </td>
                 <td>
