--- a/LaurasForms/participants/templates/participants/list_participants.html
+++ b/LaurasForms/participants/templates/participants/list_participants.html
@@ -40,8 +40,8 @@
                 </td>
                 <td>
                     <form method="POST">{% csrf_token %}
-                        <select id="dropdown" name={{p.participant_name}} name="rev_status" onChange="this.form.submit()">
-                            {% for i, j in choices %}
+                        <select id="dropdown" name='{{p.participant_name}}' name="rev_status" onChange="this.form.submit()">
+                            {% for j, i in choices %}
                                 {% if i == p.review_status %}
                                     <option selected class={{j}}> {{ i }} </option>
                                 {% else %}
