fixed the dropdowns (again), because of rev_status_choices

--- a/LaurasForms/participants/templates/participants/list_participants.html
+++ b/LaurasForms/participants/templates/participants/list_participants.html
@@ -41,7 +41,7 @@
                 <td>
                     <form method="POST">{% csrf_token %}
                         <select id="dropdown" name='{{p.participant_name}}' name="rev_status" onChange="this.form.submit()">
-                            {% for j, i in choices %}
+                            {% for i, j in choices %}
                                 {% if i == p.review_status %}
                                     <option selected class={{j}}> {{ i }} </option>
                                 {% else %}
