--- a/LaurasForms/participants/templates/participants/list_participants.html
+++ b/LaurasForms/participants/templates/participants/list_participants.html
@@ -41,8 +41,8 @@
                 <td>
                     <form method="POST">{% csrf_token %}
                         <select id="dropdown" name='{{p.participant_name}}' name="rev_status" onChange="this.form.submit()">
-                            {% for i, j in choices %}
-                                {% if i == p.review_status %}
+                            {% for j, i in choices %}
+                                {% if i == p.review_status or j == p.review_status %}
                                     <option selected class={{j}}> {{ i }} </option>
                                 {% else %}
                                     <option class={{j}}> {{ i }} </option>
@@ -52,15 +52,11 @@
                     </form>
                 </td>
                 <td>
-                    {% if p.review_status == 'Reviewed - Accepted' %}
-                        <nav class="Accepted"><a href = ""> {{ p.review_status }} </a></nav>
-                    {% else %}
-                        {% if p.review_status == 'Reviewed - Not Accepted' %}
-                            <nav class="NotAccepted"><a href = ""> {{ p.review_status }} </a></nav>
-                        {% else %}
-                            <nav class="NoReview"><a href = ""> {{ p.review_status }} </a></nav>
+                    {% for j, i in choices %}
+                        {% if i == p.review_status or j == p.review_status %}
+                            <nav class={{j}}><a href = ""> {{i}} </a></nav>
                         {% endif %}
-                    {% endif %}
+                    {% endfor %}
                 </td>
             </tr>
         {% endfor %}
